Add Message Server Code Stubs
